; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_write.c__archive_write_finish_entry.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_write.c__archive_write_finish_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive = type { i32 }
%struct.archive_write = type { i32 (%struct.archive_write*)*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@ARCHIVE_OK = common dso_local global i32 0, align 4
@ARCHIVE_WRITE_MAGIC = common dso_local global i32 0, align 4
@ARCHIVE_STATE_HEADER = common dso_local global i32 0, align 4
@ARCHIVE_STATE_DATA = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"archive_write_finish_entry\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.archive*)* @_archive_write_finish_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_archive_write_finish_entry(%struct.archive* %0) #0 {
  %2 = alloca %struct.archive*, align 8
  %3 = alloca %struct.archive_write*, align 8
  %4 = alloca i32, align 4
  store %struct.archive* %0, %struct.archive** %2, align 8
  %5 = load %struct.archive*, %struct.archive** %2, align 8
  %6 = bitcast %struct.archive* %5 to %struct.archive_write*
  store %struct.archive_write* %6, %struct.archive_write** %3, align 8
  %7 = load i32, i32* @ARCHIVE_OK, align 4
  store i32 %7, i32* %4, align 4
  %8 = load %struct.archive_write*, %struct.archive_write** %3, align 8
  %9 = getelementptr inbounds %struct.archive_write, %struct.archive_write* %8, i32 0, i32 1
  %10 = load i32, i32* @ARCHIVE_WRITE_MAGIC, align 4
  %11 = load i32, i32* @ARCHIVE_STATE_HEADER, align 4
  %12 = load i32, i32* @ARCHIVE_STATE_DATA, align 4
  %13 = or i32 %11, %12
  %14 = call i32 @archive_check_magic(%struct.TYPE_2__* %9, i32 %10, i32 %13, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %15 = load %struct.archive_write*, %struct.archive_write** %3, align 8
  %16 = getelementptr inbounds %struct.archive_write, %struct.archive_write* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = load i32, i32* @ARCHIVE_STATE_DATA, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %33

22:                                               ; preds = %1
  %23 = load %struct.archive_write*, %struct.archive_write** %3, align 8
  %24 = getelementptr inbounds %struct.archive_write, %struct.archive_write* %23, i32 0, i32 0
  %25 = load i32 (%struct.archive_write*)*, i32 (%struct.archive_write*)** %24, align 8
  %26 = icmp ne i32 (%struct.archive_write*)* %25, null
  br i1 %26, label %27, label %33

27:                                               ; preds = %22
  %28 = load %struct.archive_write*, %struct.archive_write** %3, align 8
  %29 = getelementptr inbounds %struct.archive_write, %struct.archive_write* %28, i32 0, i32 0
  %30 = load i32 (%struct.archive_write*)*, i32 (%struct.archive_write*)** %29, align 8
  %31 = load %struct.archive_write*, %struct.archive_write** %3, align 8
  %32 = call i32 %30(%struct.archive_write* %31)
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %27, %22, %1
  %34 = load i32, i32* @ARCHIVE_STATE_HEADER, align 4
  %35 = load %struct.archive_write*, %struct.archive_write** %3, align 8
  %36 = getelementptr inbounds %struct.archive_write, %struct.archive_write* %35, i32 0, i32 1
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  store i32 %34, i32* %37, align 8
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32 @archive_check_magic(%struct.TYPE_2__*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
